--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -41,5 +41,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
 </dict>
 </plist>
