--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -26,6 +26,10 @@
 	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
