--- a/bitrise.yml
+++ b/bitrise.yml
@@ -40,7 +40,7 @@ workflows:
             # debug log
             set -x
 
-            if [ -z BITRISE_BUILD_STATUS ]; then
+            if [ "$BITRISE_BUILD_STATUS" -eq "0" ]; then
                 BSTATUS=success;
             else
                 BSTATUS=failed;
@@ -85,7 +85,7 @@ workflows:
             # debug log
             set -x
 
-            if [ -z BITRISE_BUILD_STATUS ]; then
+            if [ "$BITRISE_BUILD_STATUS" -eq "0" ]; then
                 BSTATUS=success;
             else
                 BSTATUS=failed;
@@ -130,7 +130,7 @@ workflows:
             # debug log
             set -x
 
-            if [ -z BITRISE_BUILD_STATUS ]; then
+            if [ "$BITRISE_BUILD_STATUS" -eq "0" ]; then
                 BSTATUS=success;
             else
                 BSTATUS=failed;
