--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AV_API_AUTHENTICATION_REALM</key>
+	<string>$(AV_API_AUTHENTICATION_REALM)</string>
 	<key>AV_API_ENDPOINT</key>
 	<string>$(AV_API_ENDPOINT)</string>
 	<key>CFBundleDevelopmentRegion</key>
