--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -28,17 +28,7 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>location</string>
-	</array>
-  <key>NSAppTransportSecurity</key>
+	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
@@ -49,6 +39,17 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use your location in order to show other users where trained users are. Your location is anonymous.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
